@@ -19,11 +19,11 @@
 package org.apache.maven.di.impl;
 
 import java.lang.reflect.Type;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 
 import org.apache.maven.di.Key;
 import org.junit.jupiter.api.Test;
@@ -34,14 +34,13 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class TypeUtilsTest {
 
-    TreeSet<String> aField;
-
     @Test
     void testGetSuperTypes() {
         Type type = new Key<TreeSet<String>>() {}.getType();
         Set<Type> types = Types.getAllSuperTypes(type);
         assertNotNull(types);
-        List<String> typesStr = types.stream().map(Type::toString).sorted().collect(Collectors.toList());
+        List<String> typesStr =
+                new ArrayList<>(types.stream().map(Type::toString).sorted().toList());
         typesStr.remove("java.util.SequencedSet<java.lang.String>");
         typesStr.remove("java.util.SequencedCollection<java.lang.String>");
         assertEquals(
